# advent-of-code

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: args.rs  date.rs  lib.rs  main.rs
src/commands/: input.rs  mod.rs  puzzle.rs  solution.rs
src/handler/: aoc_client.rs  mod.rs  runner.rs
src/handler/commands/: mod.rs  solution.rs  solve.rs
src/template/commands/: solution.rs
src/templates/: solution.tpl
src/types/: mod.rs  part.rs
src/util/: aoc_client.rs  mod.rs
