[package]
name = "aoc"
version = "0.1.0"
authors = ["Lucas Felber"]
edition = "2021"
default-run = "aoc"

[lib]
proc-macro = true

[dependencies]
aoc-client = "0.2.0"
clap = { version = "4.4.10", features = ["derive"] }
chrono = "0.4.31"
regex = "1.10.2"
thiserror = "1.0.50"

syn = { version = "2.0.39", features = ["full"] }
quote = "1.0.33"